# video_io

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt  _conanfile.txt
benchmarks/video_reader/: CMakeLists.txt  video_reader_opencv.cpp
benchmarks/video_writer/: CMakeLists.txt  video_writer_opencv.cpp
docs/: CMakeLists.txt
examples/: CMakeLists.txt  conanfile.txt
examples/comparison_opencv_ffmpeg/: CMakeLists.txt  comparison_opencv_ffmpeg.cpp
examples/comparison_opencv_video_io/: CMakeLists.txt  comparison_opencv_video_io.cpp
examples/utils/: frame_queue.hpp  simple_frame.hpp
examples/video_reader_imgui_player/: CMakeLists.txt  video_reader_imgui_player.cpp
examples/video_reader_imgui_player_multi_thread/: CMakeLists.txt  video_reader_imgui_player.cpp  video_reader_imgui_player_multi_thread.cpp
examples/video_reader_opencv_player/: CMakeLists.txt  video_reader_opencv_player.cpp
examples/video_reader_opencv_player_multi_thread/: CMakeLists.txt  video_reader_opencv_player_multi_thread.cpp
examples/video_reader_opengl_player/: CMakeLists.txt  video_reader_opengl_player.cpp
examples/video_reader_opengl_player_multi_thread/: CMakeLists.txt  video_reader_opengl_player_multi_thread.cpp
examples/video_reader_simple_decode/: CMakeLists.txt  video_reader_simple_decode.cpp
examples/video_reader_simple_decode_multi_thread/: CMakeLists.txt  video_reader_simple_decode_multi_thread.cpp
examples/video_writer_simple_encode/: CMakeLists.txt  video_writer_simple_encode.cpp
scripts/: conan_install.sh
scripts/conan/: install.py  profile.py
scripts/tools/: run_gcovr.py
scripts/valgrind/: run_callgrind.sh  run_memcheck.sh
tests/: CMakeLists.txt  conanfile.txt
tests/data/new/: testsrc2_3sec_30fps_640x480.avi  testsrc2_3sec_30fps_640x480.mkv  testsrc2_3sec_30fps_640x480.mpg
tests/include/: video_capture_test.hpp
tests/src/: main.cpp  raw_frame_test.cpp  raw_frame_test.hpp  test_video_reader.cpp  test_video_reader.hpp  test_video_writer.cpp  test_video_writer.hpp
video_io/: CMakeLists.txt  conanfile.txt
video_io/include/video_io/: api.hpp  frame_queue.hpp  raw_frame.hpp  video_reader.hpp  video_writer.hpp
video_io/src/: logger.hpp  video_reader.cpp  video_reader_hw.cpp  video_reader_hw.hpp  video_writer.cpp  writer_example.cpp
