# add_subdirectory(comparison_opencv_ffmpeg) 

# add_subdirectory(video_reader_imgui_player)
# add_subdirectory(video_reader_imgui_player_multi_thread)

# add_subdirectory(video_reader_opencv_player)
# add_subdirectory(video_reader_opencv_player_multi_thread)

add_subdirectory(video_reader_opengl_player)
add_subdirectory(video_reader_opengl_player_multi_thread)

add_subdirectory(video_reader_simple_decode)
add_subdirectory(video_reader_simple_decode_multi_thread)

add_subdirectory(video_writer_simple_encode)